[Untested] Added arithmetic to "conditionals"